Fixed layout error in the App.tsx.
The .app element (wrap everything except the AppAlert component) had a
height of 100vh. This was OK when AppAlert isn't added adjacent to it,
but now we have an AppAlert above it, so when it shows itself, the whole
.app element is pushed down and make some content be out of the viewport.

--- a/client/src/pages/App/App.module.css
+++ b/client/src/pages/App/App.module.css
@@ -1,6 +1,7 @@
 .app {
   display: flex;
-  height: 100vh;
+  flex: 1;
+  overflow: hidden;
   width: 100vw;
 }
 
